# cookiecutter-cloudfunctions

./: .flake8  404.html  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code_quality_checks.yml
advanced/feature_explanation/: index.html
docs/: index.md
docs/advanced/: feature_explanation.md
docs/getting-started/: configure_github_repo.md  connect_to_remote_repo.md  create_local_project.md  deploy_to_gcp.md
docs/triggers/: cloud_firestore.md  cloud_storage.md  http.md  pub_sub.md
getting-started/configure_github_repo/: index.html
getting-started/connect_to_remote_repo/: index.html
getting-started/create_local_project/: index.html
getting-started/deploy_to_gcp/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
search/: search_index.json
tests/: test_project_creation.py
triggers/cloud_firestore/: index.html
triggers/cloud_storage/: index.html
triggers/http/: index.html
triggers/pub_sub/: index.html
{{cookiecutter.project_slug}}/: .flake8  .gcloudignore  .gitignore  LICENSE  README.md  cloudbuild.yaml  main.py  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: code_quality_checks.yml
{{cookiecutter.project_slug}}/tests/: test_pipline.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  pipeline.py
