[tool]

[tool.poetry]
name = "cookiecutter-cloudfunctions"
version = "0.0.0"
description = "Cookiecutter to create a Google Function. Powered by Poetry, GitHub actions, and Google Cloud Platform."
authors = ["Marco Gancitano <marco.gancitano@askarthur.art>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/askarthur/cookiecutter-cloudfunctions"
repository = "https://github.com/askarthur/cookiecutter-cloudfunctions"
keywords = ["cookiecutter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.0"
pytest = "^5.4.0"
pytest-cov = "^2.10.0"
pytest-cookies = "^0.5.0"
invoke = "^1.4.0"
pydocstyle = "5.0.0"
flake8 = "^4.0.0"
flake8-docstrings = "1.6.0"
flake8-import-order = "0.18.1"
flake8-colors = "0.1.8"
mypy = "0.960"
black = "22.3.0"

[tool.black]
line-length=100
include = '''
(
  /(
      hooks
    | tests
  )/
)
'''
exclude = '''
(
  /(
      {{cookiecutter.project_slug}}
      | .git
      | .venv
      | __pycache__
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
